# aoc-2022

./: Cargo.toml  log-config.yml
common/: Cargo.toml
common/src/: lib.rs
day-template/src/: main.rs
day00/src/: main.rs
day01-21/: Cargo.toml
day01-21/src/: main.rs
day01-22/: Cargo.toml
day01-22/src/: main.rs
day02-21/: Cargo.toml
day02-21/src/: main.rs
day02-22/: Cargo.toml
day02-22/src/: main.rs
day03-22/: Cargo.toml
day03-22/src/: main.rs
day04-22/: Cargo.toml
day04-22/src/: main.rs
day05-22/: Cargo.toml
day05-22/src/: main.rs
day06-22/: Cargo.toml
day06-22/src/: main.rs
day07-22/: Cargo.toml
day07-22/src/: main.rs
day08-22/: Cargo.toml
day08-22/src/: main.rs
day09-22/: Cargo.toml
day09-22/src/: main.rs
day10-22/: Cargo.toml
day10-22/src/: main.rs
day11-22/: Cargo.toml
day11-22/src/: main.rs
day12-22/: Cargo.toml
day12-22/src/: main.rs
day13-22/: Cargo.toml
day13-22/inputs/: simple.txt
day13-22/src/: main.rs
day14-22/: Cargo.toml
day14-22/src/: main.rs
day15-22/: Cargo.toml
day15-22/inputs/: input.txt  simple.txt
day15-22/src/: main.rs
day16-22/: Cargo.toml
day16-22/src/: main.rs
day17-22/: Cargo.toml
day17-22/src/: main.rs
day18-22/: Cargo.toml
day18-22/src/: main.rs
day19-22/: Cargo.toml
day19-22/src/: main.rs
day20-22/: Cargo.toml
day20-22/src/: main.rs
day21-22/: Cargo.toml
day21-22/src/: main.rs
day22-22/: Cargo.toml
day22-22/src/: main.rs
day23-22/: Cargo.toml
day23-22/src/: main.rs
day24-22/: Cargo.toml
day24-22/src/: main.rs
day25-22/: Cargo.toml
(+2 files in other folders)
