[workspace]

members = [
  "common",
  "day-template",
  "day01-21",
  "day02-21",
  "day01-22",
  "day02-22",
  "day03-22",
  "day04-22",
  "day05-22",
  "day06-22",
  "day07-22",
  "day08-22",
  "day09-22",
  "day10-22",
  "day11-22",
  "day12-22",
  "day13-22",
  "day14-22",
  "day15-22",
  "day16-22",
  "day17-22",
  "day18-22",
  "day19-22",
  "day20-22",
  "day21-22",
  "day22-22",
  "day23-22",
  "day24-22",
  "day25-22"
]